[package]
name = "pngquant"
version = "0.1.0"
edition = "2021"
publish = false

[profile.release]
lto = true
opt-level = "s"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
bytemuck = "1.16.1"
wee_alloc = "0.4.2"
imagequant = { version = "4", default-features = false }
oxipng = { version = "9", features = ["freestanding"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
