[package]
name = "pngquant"
version = "0.1.0"
edition = "2021"
publish = false

[profile.release]
lto = true
opt-level = "s"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
bytemuck = "1"
lol_alloc = "0.4"
png = "0.17"
rgb = "0.8"
js-sys = "0.3"
imagequant = { version = "4", default-features = false }
oxipng = { version = "9", features = ["freestanding"], default-features = false }
serde = { version = "1", features = ["derive"] }
